manifests/kustomize/base/installs/multi-user/pipelines-profile-controller/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeflow-pipelines-profile-controller
spec:
  replicas: 1
  template:
    metadata:
      labels:
        sidecar.istio.io/inject: "false"
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: profile-controller
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 0
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        # We just need an image with the python botocore library installed
        image: docker.io/alpine/k8s:1.37.1
        command: ["python", "/hooks/sync.py"]
        volumeMounts:
        - name: hooks
          mountPath: /hooks
        ports:
        - containerPort: 8080
      volumes:
      - name: hooks
        configMap:
          name: kubeflow-pipelines-profile-controller-code
