manifests/kustomize/base/installs/multi-user/pipelines-profile-controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeflow-pipelines-profile-controller
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
